# METIS_Simulations

./: .gitignore  README.md  pyproject.toml  runESO.sh  runESO_small.sh
.github/workflows/: daily-build.yaml  daily_build.yaml  run_recipes.yml
AIT_Tests/LMS_OPT_01/: LMS_OPT_1.yaml
AIT_Tests/LMS_OPT_02/: LMS_OPT_2.yaml
AIT_Tests/LMS_RAD_01/: LMS_RAD_01.yaml
AIT_Tests/LMS_RAD_06/: LMS_RAD_06.yaml  LMS_RAD_06_1.yaml  LMS_RAD_06_2.yaml  LMS_RAD_06_3.yaml  LMS_RAD_06_4.yaml  LMS_RAD_06_5.yaml  LMS_RAD_06_6.yaml
AIT_Tests/LMS_RAD_10/: LMS_RAD_10.yaml
AIT_Tests/LSS_RAD_03/: LSS_RAD_03_lm.yaml  LSS_RAD_03_n.yaml
AIT_Tests/LSS_RAD_04/: LSS_RAD_04_lm.yaml  LSS_RAD_04_n.yaml
AIT_Tests/LSS_RAD_12/: LSS_RAD_12_lm.yaml  LSS_RAD_12_n.yaml  LSS_RAD_12_n_list.yaml
ESO/: README.md  check_headers.py  check_sof_files.py  checksum.txt  compare_yaml_with_drld.py  darks.yaml  downloads.py  generateSummary.py  grabHeaders.py  ifu.yaml  lm_image_sci_raw.py  makeCalibPrototypes.py  raw_script.py  recipes.yaml  recipes1.yaml  recipes2.yaml  runRecipes.py  run_recipes.py  simulationDefinitions.py  sources.py  testArgs.py  updateHeaders.py
ESO/sofFiles/: metis_LM_lss_mf_calctrans.sof  metis_LM_lss_sci.sof  metis_LM_lss_std.sof  metis_LM_lss_trace.sof  metis_LM_lss_wave.sof  metis_N_lss_mf_model.sof  metis_N_lss_rsrf.sof  metis_N_lss_std.sof  metis_N_lss_trace.sof  metis_cal_chophome.sof  metis_det_dark.lm.sof  metis_det_lingain.ifu.sof  metis_det_lingain.lm.sof  (+51 more)
LMS_preFDRtests/: lms_manypins.py  lms_pinholes.py  lms_sky.py
ScienceCases/: README.md
Simulations/: .#runAllRecipes.sh  GenerateCalib.ipynb  README.md  runAllRecipes.sh  runESO.sh  runESOsmall.sh  runner.py  summary.csv  summary.txt  test.yaml
YAML/: allRecipes.yaml  calib.yaml  darkIFU.yaml  darkN.yaml  detlinIFU.yaml  detlinN.yaml  distortionIFU.yaml  flatLampN.yaml  flatTwilightN.yaml  hciRavcIfu.yaml  ifu-rsrf.yaml  ifu.yaml  imgLM.yaml  lssN.yaml  metis_det_dark.yaml  offAxisIFU.yaml  offAxisLM.yaml  persistIfu.yaml  rsrfIFU.yaml  rsrfLSSLM.yaml  rsrfPinhIFU.yaml  rsrfPinhLSSLM.yaml  scienceLSSLM.yaml  scienceLSSN.yaml  slitlossLSSLM.yaml  stdIFU.yaml  stdLM.yaml  stdN.yaml  testYAML.yaml  validate_yamls.py  wavecalLSSLM.yaml  wavecalLSSN.yaml  wcuOffIFU.yaml  yaml_validation_report.md
docs/: conf.py  fitswrangler.rst  index.rst  make.bat  structure.rst  workflows.rst  writing_workflows.rst
fitsWrangler/: README.md  examples.ipynb  fitsWrangler.py
metis_simulations/: check_headers.py  check_sof_files.py  compare_yaml_with_drld.py  csvParser.py  downloadPackages.py  downloads.py  druns.csv  generateSummary.py  grabHeaders.py  makeCalibPrototypes.py  makeSOF.py  raw_script.py  runRecipes.py  runSimulationBlock.py  runs.csv  scopesimWrapper.py  setupSimulations.py  simulationDefinitions.py  sources.py  templates.yaml  testAll.py
simulationBlocks/: baseRunner.py  calib.py  extraFlats.py  hciAppLm.py  hciRavcIfu.py  hciRavcLM.py  ifu.py  imgLM.py  imgLMLp.py  imgLM_t.py  imgN.py  lssLM.py  lssN.py
(+389 files in other folders)
