[tool.poetry]
name = "METIS_Simulations"
version = "0.1.0a"
description = "METIS Simulations for ESO"
license = "GPL-3.0-or-later"
authors = ["Jennifer Karr <jkarr@asiaa.sinica.edu.tw>"]
maintainers = [
    "Jennifer Karr <jkarr@asiaa.sinica.edu.tw>",
    "Hugo Buddelmeijer <hugo@buddelmeijer.nl>",
    "Fabian Haberhauer <fabian.haberhauer@univie.ac.at>",
]
readme = "README.md"
repository = "https://github.com/AstarVienna/METIS_Simulations"
documentation = "https://scopesim.readthedocs.io/en/latest/"
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]
packages = [
    { include = "ESO" }
]
[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.3"
astropy = "^6.0.0"
matplotlib = "^3.7.2"

ScopeSim = ">=0.9.0"
ScopeSim_Templates = "^0.5.2"
astar-utils = ">=0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
