[tool.poetry]
name = "METIS_Simulations"
version = "0.1.0a"
description = "METIS Simulations for ESO"
license = "GPL-3.0-or-later"
authors = ["Jennifer Karr <jkarr@asiaa.sinica.edu.tw>"]
maintainers = [
    "Jennifer Karr <jkarr@asiaa.sinica.edu.tw>",
    "Hugo Buddelmeijer <hugo@buddelmeijer.nl>",
    "Fabian Haberhauer <fabian.haberhauer@univie.ac.at>",
]
readme = "README.md"
repository = "https://github.com/AstarVienna/METIS_Simulations"
documentation = "https://scopesim.readthedocs.io/en/latest/"
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]
packages = [
    { include = "metis_simulations" }
]


ScopeSim = ">= 0.11.2"
ScopeSim_Templates = ">=0.8.1"
python = ">=3.12,<3.15" 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

