[project]
name = "metis_simulations"
version = "0.1.0a"
description = "METIS Simulations for ESO"
license = "GPL-3.0-or-later"
authors = [
{name = "Jennifer Karr", email="jkarr@asiaa.sinica.edu.tw"}
]
maintainers = [
{name = "Jennifer Karr", email = "jkarr@asiaa.sinica.edu.tw"},
{name = "Hugo Buddelmeijer", email = "hugo@buddelmeijer.nl"},
{name = "Fabian Haberhauer", email = "fabian.haberhauer@univie.ac.at"},
]
readme = "README.md"
repository = "https://github.com/AstarVienna/METIS_Simulations"
documentation = "https://scopesim.readthedocs.io/en/latest/"
requires-python = ">=3.12,<3.15"
dependencies = [
    "scopesim >=0.11.2",
    "scopesim_templates >=0.8.1"
]
[tool.poetry]
packages = [{include = "metis_simulations"}]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
